# netlark

client/: Cargo.toml  README.md  SERVER.md
client/benches/: bench.rs
client/old/: account2.rs  game.rs  lib2.rs  message.rs  notes.rs  npc.rs  player.rs  state.rs  stats.rs
client/old/ui/: textinput.rs
client/old/world/: mod.rs  tilemap.rs
client/src/: account.rs  inventory.rs  keymap.rs  lib.rs  mainmenu.rs  net.rs  rendering.rs  scene.rs  signin.rs  unit.rs
client/src/ui/: mod.rs
common/: Cargo.toml
common/src/: frame.rs  lib.rs  main.rs
common/src/models/: gamestate.rs  message.rs  mod.rs  tilemap.rs
server/: Cargo.toml  README.md
server/src/: connections.rs  datastore.rs  lib.rs  main.rs
server/src/accounts/: mod.rs  signin.rs  signup.rs
server/src/codec/: mod.rs  newline.rs
