[package]
name = "client"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tinybit = { path = "../../tinybit" }
legion = "0.3.1"
serde_json = "1.0.59"
serde = "1.0.119"
common = { path = "../common" }
