[package]
name = "server"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netlib = { path = "../../netlib" }
libc = "0.2.81"
common = { path = "../common" }
tinybit = { path = "../../tinybit" }
serde = "1.0.119"
